cck commit project rename carpool post

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Mission-Web-MVC01</name>
+	<name>carpool</name>
 	<comment></comment>
 	<projects>
 	</projects>
