--- a/bean.properties
+++ b/bean.properties
@@ -7,7 +7,10 @@
 /login/login.do=kr.controller.login.Login_Controller
 /login/loginProcess.do=kr.controller.login.LoginProcess_Controller
 /login/logout.do=kr.controller.login.Logout_Controller
+/login/naver_login.do=kr.controller.login.NaverLogin_Controller
 /member/list_user.do=kr.controller.member.ListUser_Controller
 /member/add_user.do=kr.controller.member.AddUser_Controller
 /member/add_user_form.do=kr.controller.member.AddUserForm_Controller
 /member/detail_user.do=kr.controller.member.DetailUser_Controller
+/carpool/add_carpool_form.do=kr.controller.carpool.AddCarpoolForm_Controller
+/carpool/add_carpool.do=kr.controller.carpool.AddCarpool_Controller
