--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-  <display-name>Mission-Web-MVC01</display-name>
+  <display-name>carpool</display-name>
   <servlet>
   	<servlet-name>frontController</servlet-name>
   	<servlet-class>kr.controller.FrontController</servlet-class>
   	<init-param>
   		<param-name>proplocation</param-name>
-  		<param-value>C:\\lecture\\web-workspace\\Mission-Web-MVC01\\bean.properties</param-value>
+  		<param-value>C:\\lecture\\web-workspace\\carpool\\bean.properties</param-value>
   	</init-param>
   </servlet>
   <servlet-mapping>
