--- a/bean.properties
+++ b/bean.properties
@@ -4,6 +4,10 @@
 /board/detail_post.do=kr.controller.board.DetailPost_Controller
 /board/dele_post.do=kr.controller.board.DelePost_Controller
 /board/search_post.do=kr.controller.board.SearchPost_Controller
+/board/hugi_board_list.do=kr.controller.board.HugiBoardList_Controller
+/board/free_board_list.do=kr.controller.board.FreeBoardList_Controller
+/board/delete_board.do=kr.controller.board.Delete_Controller
+/board/detail_board.do=kr.controller.board.Detail_Controller
 /login/login.do=kr.controller.login.Login_Controller
 /login/loginProcess.do=kr.controller.login.LoginProcess_Controller
 /login/logout.do=kr.controller.login.Logout_Controller
