--- a/bean.properties
+++ b/bean.properties
@@ -10,4 +10,10 @@
 /member/list_user.do=kr.controller.member.ListUser_Controller
 /member/add_user.do=kr.controller.member.AddUser_Controller
 /member/add_user_form.do=kr.controller.member.AddUserForm_Controller
-/member/detail_user.do=kr.controller.member.DetailUser_Controller
+/member/withdrawal.do=kr.controller.member.WithdrawalController
+/member/withdrawalProcess.do=kr.controller.member.WithdrawalProcessController
+/myPage/MyProfile.do=kr.controller.myPage.MyProfileController
+/myPage/MyPageMain.do=kr.controller.myPage.MyPageMainController
+/myPage/MyCar.do=kr.controller.myPage.MyCarController
+/myPage/MyCarForm.do=kr.controller.myPage.MyCarFormController
+/myPage/MyCarProcess.do=kr.controller.myPage.MyCarProcessController
