--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,16 +2,16 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>carpool</display-name>
   <servlet>
-  	<servlet-name>frontController</servlet-name>
-  	<servlet-class>kr.controller.FrontController</servlet-class>
-  	<init-param>
-  		<param-name>proplocation</param-name>
-  		<param-value>C:\\lecture\\web-workspace\\carpool\\bean.properties</param-value>
-  	</init-param>
+    <servlet-name>frontController</servlet-name>
+    <servlet-class>kr.controller.FrontController</servlet-class>
+    <init-param>
+      <param-name>proplocation</param-name>
+      <param-value>C:\\lecture\\web-workspace\\carpool\\bean.properties</param-value>
+    </init-param>
   </servlet>
   <servlet-mapping>
-  	<servlet-name>frontController</servlet-name>
-  	<url-pattern>*.do</url-pattern>
+    <servlet-name>frontController</servlet-name>
+    <url-pattern>*.do</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -21,3 +21,4 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+</web-app>
