--- a/bean.properties
+++ b/bean.properties
@@ -15,6 +15,7 @@
 /member/list_user.do=kr.controller.member.ListUser_Controller
 /member/add_user.do=kr.controller.member.AddUser_Controller
 /member/add_user_form.do=kr.controller.member.AddUserForm_Controller
+/member/check_user.do=kr.controller.member.CheckUser_Controller
 /member/detail_user.do=kr.controller.member.DetailUser_Controller
 /myPage/MyProfile.do=kr.controller.myPage.MyProfileController
 /myPage/MyPageMain.do=kr.controller.myPage.MyPageMainController
