add_post.js > add_carpool.js add_carpool_from add input smoke add_user_form modified user_id_check header carpool_add naver_login

--- a/bean.properties
+++ b/bean.properties
@@ -16,6 +16,7 @@
 /member/add_user.do=kr.controller.member.AddUser_Controller
 /member/add_user_form.do=kr.controller.member.AddUserForm_Controller
 /member/detail_user.do=kr.controller.member.DetailUser_Controller
+/member/check_user.do=kr.controller.member.CheckUser_Controller
 /myPage/MyProfile.do=kr.controller.myPage.MyProfileController
 /myPage/MyPageMain.do=kr.controller.myPage.MyPageMainController
 /myPage/MyCar.do=kr.controller.myPage.MyCarController
