--- a/bean.properties
+++ b/bean.properties
@@ -1,6 +1,4 @@
 /board/list_post.do=kr.controller.board.ListPost_Controller
-/board/add_post.do=kr.controller.board.AddPost_Controller
-/board/add_post_form.do=kr.controller.board.AddPostForm_Controller
 /board/detail_post.do=kr.controller.board.DetailPost_Controller
 /board/dele_post.do=kr.controller.board.DelePost_Controller
 /board/search_post.do=kr.controller.board.SearchPost_Controller
@@ -12,6 +10,7 @@
 /login/loginProcess.do=kr.controller.login.LoginProcess_Controller
 /login/logout.do=kr.controller.login.Logout_Controller
 /login/naver_login.do=kr.controller.login.NaverLogin_Controller
+/login/check_user_naver.do=kr.controller.login.CheckUserNaver_Controller
 /member/list_user.do=kr.controller.member.ListUser_Controller
 /member/add_user.do=kr.controller.member.AddUser_Controller
 /member/add_user_form.do=kr.controller.member.AddUserForm_Controller
@@ -24,3 +23,7 @@
 /myPage/MyCarProcess.do=kr.controller.myPage.MyCarProcessController
 /carpool/add_carpool_form.do=kr.controller.carpool.AddCarpoolForm_Controller
 /carpool/add_carpool.do=kr.controller.carpool.AddCarpool_Controller
+/carpool/list_carpool.do=kr.controller.carpool.ListCarpool_Controller
+/carpool/detail_carpool.do=kr.controller.carpool.DetailCarpool_Controller
+/carpool/dele_carpool.do=kr.controller.carpool.DeleCarpool_Controller
+/apply/add_apply.do=kr.controller.apply.AddApply_Controller
