--- a/bean.properties
+++ b/bean.properties
@@ -1,13 +1,17 @@
-/board/list_post.do=kr.controller.board.ListPost_Controller
-/board/add_post.do=kr.controller.board.AddPost_Controller
-/board/add_post_form.do=kr.controller.board.AddPostForm_Controller
-/board/detail_post.do=kr.controller.board.DetailPost_Controller
-/board/dele_post.do=kr.controller.board.DelePost_Controller
-/board/search_post.do=kr.controller.board.SearchPost_Controller
-/board/hugi_board_list.do=kr.controller.board.HugiBoardList_Controller
 /board/free_board_list.do=kr.controller.board.FreeBoardList_Controller
 /board/delete_board.do=kr.controller.board.Delete_Controller
 /board/detail_board.do=kr.controller.board.Detail_Controller
+/board/add_board.do=kr.controller.board.Addboard_Controller
+/board/add_board_form.do=kr.controller.board.Addboard_form_controller
+/board/update_board_form.do=kr.controller.board.Update_form_controller
+/board/update_board.do=kr.controller.board.Update_Controller
+/boardReview/review_board_list.do=kr.controller.board.review.ReviewBoardList_Controller
+/boardReview/delete_board.do=kr.controller.board.review.Delete_Controller
+/boardReview/detail_board.do=kr.controller.board.review.Detail_Controller
+/boardReview/add_board.do=kr.controller.board.review.Addboard_Controller
+/boardReview/add_board_form.do=kr.controller.board.review.Addboard_form_controller
+/boardReview/update_board_form.do=kr.controller.board.review.Update_form_controller
+/boardReview/update_board.do=kr.controller.board.review.Update_Controller
 /login/login.do=kr.controller.login.Login_Controller
 /login/loginProcess.do=kr.controller.login.LoginProcess_Controller
 /login/logout.do=kr.controller.login.Logout_Controller
