--- a/bean.properties
+++ b/bean.properties
@@ -16,10 +16,15 @@
 /member/add_user.do=kr.controller.member.AddUser_Controller
 /member/add_user_form.do=kr.controller.member.AddUserForm_Controller
 /member/detail_user.do=kr.controller.member.DetailUser_Controller
+/member/Withdrawal.do=kr.controller.member.WithdrawalController
+/member/WithdrawalProcess.do=kr.controller.member.WithdrawalProcessController
 /myPage/MyProfile.do=kr.controller.myPage.MyProfileController
 /myPage/MyPageMain.do=kr.controller.myPage.MyPageMainController
 /myPage/MyCar.do=kr.controller.myPage.MyCarController
 /myPage/MyCarForm.do=kr.controller.myPage.MyCarFormController
 /myPage/MyCarProcess.do=kr.controller.myPage.MyCarProcessController
+/myPage/MyCarDelete.do=kr.controller.myPage.MyCarDeleteController
+/myPage/MyReservation.do=kr.controller.myPage.MyReservationController
+/myPage/SentReserv.do=kr.controller.myPage.SentReservController
 /carpool/add_carpool_form.do=kr.controller.carpool.AddCarpoolForm_Controller
 /carpool/add_carpool.do=kr.controller.carpool.AddCarpool_Controller
